--- a/OnlineShop/WebContent/WEB-INF/login.html
+++ b/OnlineShop/WebContent/WEB-INF/login.html
@@ -5,6 +5,16 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<!-- This is HTML comment -->
+	<form action="#" method="post">
+	<label>Username:</label>
+	<input type="text" name="uname" placeholder="Enter Username">
+	<br>
+	<label>Password:</label>
+	<input type="password" name="pwd" placeholder="Enter Password">
+	<br>
+	<input type="reset">
+	<input type="submit" value="Submit">
+	</form>
 </body>
 </html>
