--- a/OnlineShop/WebContent/WEB-INF/registration.html
+++ b/OnlineShop/WebContent/WEB-INF/registration.html
@@ -5,6 +5,20 @@
 <title>Imran</title>
 </head>
 <body>
+<h1>Data Registration Page</h1>
+	<center>
+	<form action=" ">
+	<table>
+	<tr>
+	<td>Name:</td><td><input type="text" name="uname" ></td></tr>
+	<tr>
+	<td>DOB:</td><td><input type="date" name="dname"></td></tr>
+	<tr "style=background:red">
+	<td>Email:</td><td><input type="email" name="ename"></td></tr>
+	<tr>
+	<td></td><td><input type="submit" value="submit"></td></tr>
+	</table>
+	</form>
 
 </body>
 </html>
